# SegviGen-app

./: .gitignore  README.md  app.py  install.sh  pyproject.toml  server.py  util.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.js  App.tsx  index.css  main.js  main.tsx  model-viewer.d.ts
frontend/src/api/: client.js  client.ts
frontend/src/components/: SamplerFields.js  SamplerFields.tsx  SplitFields.js  SplitFields.tsx  Viewer3D.js  Viewer3D.tsx
frontend/src/components/tabs/: Full2DTab.js  Full2DTab.tsx  FullTab.js  FullTab.tsx  GuidanceTab.js  GuidanceTab.tsx  InteractiveTab.js  InteractiveTab.tsx  SegTab.js  SegTab.tsx
frontend/src/components/ui/: Accordion.js  Accordion.tsx  Field.js  Field.tsx
frontend/src/hooks/: useJob.js  useJob.ts  usePresets.js  usePresets.ts
segvigen/: _postprocess.py  _shared.py  full.py  full_guided.py  interactive.py  presets.py
static/: index.html
static/assets/: basisTextureLoader-By_UnUfE.js  ddsTextureLoader-C5XGNaK5.js  envTextureLoader-DtJZEz5o.js  exrTextureLoader-CY4gV8bE.js  flowGraphCodeExecutionBlock-C3yzNDDO.js  flowGraphGLTFDataProvider-DgUln1zp.js  hdrTextureLoader-CBLo-yim.js  iesTextureLoader-ofXVfoz1.js  index-B0GUnPLA.js  index-ClEvGekm.css  index-DdLvxykC.css  ktxTextureLoader-CZKEnmP8.js  tgaTextureLoader-DogNfN1u.js
