[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "segvigen"
version = "0.1.0"
description = "3D mesh part segmentation using SegviGen flow-matching models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    # Pinned to match the pixmesh conda environment — pip must not upgrade these.
    "torch==2.7.0",
    "torchvision==0.22.0",
    "numpy==1.26.4",
    "tqdm==4.67.1",
    "Pillow==11.2.1",
    # Not pinned but already present in the env; listed so the package is declared.
    "huggingface-hub",
    "transformers",
    "trimesh[easy]",
    "easydict",
    "safetensors",
]

[project.optional-dependencies]
# Install with: pip install segvigen[dev]
dev = ["uvicorn", "fastapi", "pydantic"]

[project.urls]
Homepage = "https://github.com/maepopi/SegviGen-app"
Repository = "https://github.com/maepopi/SegviGen-app"

[tool.setuptools.packages.find]
where = ["."]
include = ["segvigen*", "trellis2*"]

[tool.setuptools.package-data]
# Exclude checkpoint files — they are downloaded at runtime from HuggingFace.
segvigen = ["py.typed"]

[tool.setuptools.exclude-package-data]
segvigen = ["ckpt/*.ckpt"]
